# vtb_hack

./: README.md  pyproject.toml
backend/: ch_client.py  main.py
ddl/: schemas.sql
notebooks/: test.ipynb
vtb_hack/: main.py  rss_scraper.py  tg_scraper.py
vtb_hack/backend/: backbone.py  ch_client.py  main.py
vtb_hack/data_models/: schemas.py
vtb_hack/src/: preprocessors.py  rss_scraper.py
vtb_hack/tg_bot/: bot.py
