[tool.poetry]
name = "vtb_hack"
version = "0.1.0"
description = ""
authors = ["ksetherg <ksetherg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
Telethon = "^1.25.2"
PySocks = "^1.7.1"
clickhouse-driver = "^0.2.4"
structlog = "^22.1.0"
nltk = "^3.7"
pymorphy2 = "^0.9.1"
numpy = "^1.23.3"
pandas = "^1.5.0"
spacy = "^3.4.1"
scikit-learn = "^1.1.2"
transformers = "^4.22.2"
torch = "^1.12.1"
feedparser = "^6.0.10"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
